Second last upload

--- a/Web Dev Final Project/form.html
+++ b/Web Dev Final Project/form.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="initial-scale=1.0, user-scalable=yes"/>
 
+        <!--stylesheet link-->
         <link rel="stylesheet" href="form-styling.css">
 
         <style>
@@ -16,6 +17,7 @@
 
         <br>
 
+        <!--form with text and radio button inputs-->
         <form>
             <p>Do you know what parts you want?</p>
             <div>
@@ -66,6 +68,9 @@
                 <input type="radio" id="modeling-rendering" name="use" value="modeling-rendering">
                 <label for="modeling-rendering">Modeling and Rendering</label>
             </div>
+
+            <!--link to home page-->
+            <p>Back to <a href="index.html">Home</a></p>
         </form>
     </body>
 </html>
