--- a/Web Dev Final Project/form2.html
+++ b/Web Dev Final Project/form2.html
@@ -5,12 +5,14 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="initial-scale=1.0, user-scalable=yes"/>
 
+        <!--link to stylesheet-->
         <link rel="stylesheet" href="form-styling.css">
     </head>
 
     <body>
         <h1>Choose Your Parts</h1>
 
+        <!--form with text and radio inputs-->
         <form>
             <p>What CPU are you using?</p>
             <input type="text" id="cpu" name="cpu" class="text">
@@ -73,6 +75,7 @@
 
             <br>
 
+            <!--checbox inputs-->
             <div>
                 <p>If you answered yes to the last question what parts wouuld you like water-cooled?</p>
                 <input type="checkbox" id="CPU" name="CPU" value="CPU">
@@ -86,6 +89,9 @@
                 <input type="checkbox" id="RAM" name="RAM" value="RAM">
                 <label for="RAM">RAM</label>
             </div>
+
+            <!--link back to home page-->
+            <p>Back to <a href="index.html">Home</a></p>
         </form>
     </body>
 </html>
