--- a/Web Dev Final Project/about-us.html
+++ b/Web Dev Final Project/about-us.html
@@ -5,7 +5,10 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="initial-scale=1.0, user-scalable=yes"/>
 
+        <link rel="stylesheet" href="nav-styling.css">
+
         <style>
+            /*header and body styling*/
             h1 {
                 text-align: center;
                 color: gold;
@@ -16,13 +19,15 @@
                 background-color: #2541b2;
             }
 
+            /*image styling*/
             #img1 {
                 height: 750px;
                 width: 600px;
             }
 
+            /*flexbox container styling*/
             #flexbox-container > p {
-                color: #e5d549;
+                color: #dddddd;
                 width: 500px;
                 font-size: 150%;
             }
@@ -34,33 +39,7 @@
                 justify-content: space-around;
             }
 
-            .links {
-                color: yellow;
-                padding: 15px;
-                font-size: 150%;
-                height: 100px;
-            }
-
-            .links:visited {
-                color: orange;
-            }
-
-            .links:hover {
-                color: gold;
-            }
-
-            ul {
-                display: flex;
-                flex-direction: row;
-                width: 95%;
-                list-style-type: none;
-                justify-content: space-around;
-                align-items: center;
-                border: 5px solid #e5d549;
-                height: 100px;
-                background-color: #1768ac;
-            }
-
+            /*footer styling*/
             #footer {
                 column-count: 3;
                 column-gap: 10px;
@@ -84,6 +63,7 @@
 
         <br>
 
+        <!--navigation bar-->
         <nav>
             <ul>
                 <li>
@@ -106,6 +86,7 @@
 
         <br>
 
+        <!--flexbox container and elements-->
         <div id="flexbox-container">
             <img id="img1" src="https://cwsmgmt.corsair.com/responsive/img/1000d/style-product.png" alt="computer tower with rgb">
 
@@ -118,6 +99,7 @@
             </p>
         </div>
 
+        <!--footer-->
         <div id="footer">
             <p>
                 Email us at: rgbHeavenComputers@gmail.com <br>
