--- a/Web Dev Final Project/store.html
+++ b/Web Dev Final Project/store.html
@@ -5,9 +5,13 @@
         <meta charset="utf-8"/>
         <meta name="viewport" content="initial-scale=1.0, user-scalable=yes"/>
 
+        <!--stylesheet links-->
         <link rel="stylesheet" href="form-styling.css">
 
+        <link rel="stylesheet" href="nav-styling.css">
+
         <style>
+            /*styling for the grid container*/
             #grid-container {
                 display: grid;
 
@@ -20,35 +24,78 @@
                 ;
             }
 
+            /*media queries for the divs*/
+            @media all and (max-width: 1000px) {
+                #grid-container {
+                    grid-template-areas: 
+                    "div1 div2"
+                    "div3 div4"
+                    ;
+                }
+            }
+
+            @media all and (max-width: 550px) {
+                #grid-container {
+                    grid-template-areas: 
+                    "div1"
+                    "div2"
+                    "div3"
+                    "div4"
+                    ;
+                }
+            }
+
+            /*div styling*/
             #div1 {
                 grid-template-areas: div1;
                 margin: auto;
+                transition: top 1s;
+            }
+
+            #div1:hover {
+                top: 25px;
             }
 
             #div2 {
                 grid-template-areas: div2;
                 margin: auto;
+                transition: top 1s;
+            }
+
+            #div2:hover {
+                top: 25px;
             }
 
             #div3 {
                 grid-template-areas: div3;
                 margin: auto;
+                transition: top 1s;
+            }
+
+            #div3:hover {
+                top: 25px;
             }
 
             #div4 {
                 grid-template-areas: div4;
                 margin: auto;
+                transition: top 1s;
             }
 
+            #div4:hover {
+                top: 25px;
+            }
+
+            /*div paragraph and header styling*/
             p {
                 text-align: center;
-                color: gold;
+                color: #dddddd;
                 padding: 25px;
             }
 
             h3 {
                 text-align: center;
-                color: #e5d549;
+                color: #dddddd;
                 padding: 25px;
             }
 
@@ -57,38 +104,13 @@
                 height: 400px;
                 border: 2px solid #e5d549;
                 background-color: #1768ac;
+                position: relative;
+                top: 50px;
             }
 
             h1 {
                 font-size: 250%;
                 padding-bottom: 50px;
-            }
-
-            .links {
-                color: yellow;
-                padding: 15px;
-                font-size: 150%;
-                height: 100px;
-            }
-
-            .links:visited {
-                color: orange;
-            }
-
-            .links:hover {
-                color: gold;
-            }
-
-            ul {
-                display: flex;
-                flex-direction: row;
-                width: 95%;
-                list-style-type: none;
-                justify-content: space-around;
-                align-items: center;
-                border: 5px solid #e5d549;
-                height: 100px;
-                background-color: #1768ac;
             }
         </style>
     </head>
@@ -96,6 +118,7 @@
     <body>
         <h1>Packages</h1>
 
+        <!--navigation bar-->
         <nav>
             <ul>
                 <li>
@@ -118,6 +141,7 @@
 
         <br>
 
+        <!--grid elements-->
         <div id="grid-container">
             <div id="div1" class="divs">
                 <h3>Basic Package</h3>
