--- a/Web Dev Final Project/index.html
+++ b/Web Dev Final Project/index.html
@@ -243,10 +243,7 @@
                     showSlides(slideIndex = n);
                 }
 
-                /*
-                This function creates the slides variable which will get the images by their class name
-                
-                */
+                /*This function will dtermine which image will be displayed*/
                 function showSlides(n) {
                     var i;
 
@@ -265,6 +262,7 @@
                 }
             </script>
 
+            <!--footer-->
             <div id="footer">
                 <p>
                     Email us at: rgbHeavenComputers@gmail.com <br>
